Fix code overflow in post

--- a/_webpack/stylesheets/_syntax.scss
+++ b/_webpack/stylesheets/_syntax.scss
@@ -13,7 +13,8 @@ figure.highlight {
   margin: 0;
 }
 
-pre.highlight {
+pre.highlight,
+.highlight pre {
   overflow: auto;
 }
 
